# APAM-cpp-mpi

./: CMakeLists.txt  README.md  apam_mpi.hpp  apam_mpi_core.hpp  apam_mpi_lenet5_mnist.cpp  apam_mpi_logit_mnist.cpp  apam_mpi_main.cpp  apam_mpi_mlp_mnist.cpp  lenet5_mnist_mpi.cpp  net_lenet5.hpp  net_logit.hpp  net_mlp.hpp  nets.hpp
